verif/test/deca/context/invalid/object/protected-fields-verif.res
src/test/deca/context/invalid/object/protected-fields.deca:12:15: Field 'x' is protected and cannot be accessed outside its class or subclasses 
